# mcp-integration-project

./: .gitignore  README.md  main.py  notes.txt  pyproject.toml
